--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.11'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.codingfist'
@@ -27,13 +29,37 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.graphql:spring-graphql-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'com.h2database:h2'
+
+    // Querydsl
+//    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+//    annotationProcessor("com.querydsl:querydsl-apt:${queryDslVersion}")
+
+    // Swagger
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
+    implementation "io.springfox:springfox-swagger-ui:3.0.0"
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    // OAuth2
+    implementation "org.springframework.security.oauth:spring-security-oauth2:2.0.1.RELEASE"
+
+    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 tasks.named('test') {
