--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/burning_house_auth?characterEncoding=UTF-8&ServerTimezone=UTC
     username: root
-    password: root
+    password: austin
     driver-class-name: org.mariadb.jdbc.Driver
     hikari:
       maximum-pool-size: 1
