--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,18 @@ spring:
       idle-timeout: 200000
       max-lifetime: 240000
       pool-name: oraPool
+  jpa:
+    properties:
+      hibernate:
+        format_sql: 'true'
+  profiles:
+    active: test
+  logging:
+    level:
+      org:
+        springframework:
+          web:
+            servlet: debug;
+  output:
+    ansi:
+      enabled: always
